# kvcache-lab

./: .gitignore  .gitmodules  AGENT_GUIDE.md  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  benchmark.py  chat_service.py  docker-compose.yml  lmcache_config.yaml  main.py  pyproject.toml  requirements.txt  run_experiments.sh  setup.sh
data/traces/graphiti_graph/: graphiti_graph_session.jsonl  graphiti_graph_session.jsonl.bak  graphiti_graph_session.jsonl.bak2  graphiti_graph_session_10item.jsonl
data/traces/mem0_graph/: mem0_graph_session.jsonl  mem0_graph_session_10item.jsonl
data/traces/mem0_graph_result/: mem0_graph_matches.jsonl
data/traces/tau2_airline/: tau2_airline_session.jsonl
data/traces/tau2_retail/: tau2_retail_session.jsonl
docs/: Framework_Tracing_Issues.md  Graph_Memory_Caching_Analysis.md  example_MemGPT_Caching_Analysis.md  matrix_breakdown.md
scripts/: docker_entrypoint.sh
serving/: README.md
src/: main.py  test_agent.py
src/trace_collector/: __init__.py  analyze.py  analyze_matrix.py  common.py  compare_chart.py  datasets.py  graphiti_collector.py  matrix_report.py  mem0_collector.py  neo4j_metrics.py  openai_base_collector.py  run_all.py  run_matrix.py  tau2_collector.py  test_endpoint.py
tests/: test_datasets.py  test_matrix_tools.py  test_neo4j_metrics.py  test_trace_common.py
